# PGM_ex

./: .gitignore
ex10/: outfile.txt  test.py  utils.py
ex11/: ex11.py
ex11/in2329-supplementary_material_11/: 1_9_s.yml  1_9_s_dict.yml  5_18_s.yml  5_18_s_dict.yml  5_21_s.yml  5_21_s_dict.yml  cow_detector.cpp
ex12/: ex12.py
ex5/: create_histogram.m  e_step.m  execute_em.m  gaussian_density.m  initialize_parameters.m  m_step.m  main.m
ex6/: CMakeLists.txt  main.cpp  pdf_b.csv  pdf_f.csv
ex6/maxflow-v3.04.src/: CHANGES.TXT  README.TXT  block.h  graph.cpp  graph.h  maxflow.cpp
ex7/: 12_33_s.c_unary  1_27_s.c_unary  1_9_s.c_unary  21class.txt  CMakeLists.txt  multilabel_demo.cpp
ex8/: main.py  utils.py
